added amazon assets, added mc-button on packages, and renamed daily grind inlined html

--- a/.mjmlconfig
+++ b/.mjmlconfig
@@ -2,6 +2,7 @@
   "packages": [
     "mjml-mailchimp/lib/mc-section.js",
     "mjml-mailchimp/lib/mc-image.js",
-    "mjml-mailchimp/lib/mc-text.js"
+    "mjml-mailchimp/lib/mc-text.js",
+    "mjml-mailchimp/lib/mc-button.js"
   ]
 }
